# toy-redis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
cluster/: node.py  raft.proto  raft_pb2.py  raft_pb2_grpc.py
src/: engine.cpp  engine.hpp  main.cpp
