[build-system]
requires = ["setuptools>=42", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "flashkv"
version = "0.1.0"
description = "Distributed and consistent key-value store using Raft."
readme = "README.md"
requires-python = ">3.8"

# --- RUNTIME DEPENDENCIES ---
dependencies = [
	"grpcio",
	"grpcio-tools"
]